--- a/login.html
+++ b/login.html
@@ -73,7 +73,13 @@
           <img src="img/hacker.png" alt="logo" class="logo">
           <span class="logo-context fs-3 fw-bold">3C用品店|登入</span>
         </a>
-        <div class="tool-right me-4">
+        <nav aria-label="breadcrumb" class="ms-auto me-3">
+          <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item"><a href="login.html" class="link-underline link-underline-opacity-0">登入</a></li>
+            <li class="breadcrumb-item"><a href="register.html" class="link-underline link-underline-opacity-0">註冊</a></li>
+          </ol>
+        </nav>
+        <div class="tool-right me-4 d-flex">
           <a href="personal_id.html" alt="account">
             <img src="img/user.png" class="icon pe-2">
           </a>
