--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
               <div class="text-light fs-5 mb-2">Email:</div>
               <form action="" id="subscribe" class="d-flex">
                 <input type="email" class="form-control w-75" id="email" name="email" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">訂閱</button>
+                <button class="btn btn-outline-secondary text-light" type="submit" id="button-addon2">訂閱</button>
               </form>
               <span id="error-container"></span>
             </div>
