--- a/personal_id.html
+++ b/personal_id.html
@@ -23,43 +23,8 @@
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/localization/messages_zh_TW.js "></script>
   <!-- 自定義CSS -->
   <link rel="stylesheet" href="css/style.css" />
-  <script>
-    $(document).ready(function($){
-      $("#form-personalID").validate({
-        submitHandler: function(form){
-          alert("個人資料已儲存!");
-          form.submit();
-        },
-        rules: {},
-        message: {
-          name: {
-            required: "姓名為必填欄位"
-          },
-          birth: {
-            pattern: "生日格式錯誤"
-          },
-          account:{
-            account: "帳號為必填欄位"
-          },
-          password:{
-            required: "密碼為必填欄位",
-            minlength: "密碼至少需6位"
-          },
-          phone_number:{
-            required: "電話為必填欄位",
-            pattern: "電話格式錯誤"
-          },
-          email:{
-            required: "電子郵件為必填欄位",
-            email: "電子郵件格式錯誤"
-          },
-          location:{
-            required: "地址為必填欄位"
-          }
-        }
-      })
-    });
-  </script>
+  <!-- 自定義JS -->
+  <script src="js/validate_personalID.js"></script>
 </head>
 
 <body>
@@ -68,21 +33,26 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img src="img/hacker.png" alt="logo" class="logo" />
-          <span class="logo-context fs-3 fw-bold">3C用品店|個人資料</span>
+          <img src="img/hacker.png" alt="logo" class="logo">
+          <span class="logo-context fs-3 fw-bold">3C用品店|個人檔案管理</span>
         </a>
-        <div class="tool-right me-4">
+        <nav aria-label="breadcrumb" class="ms-auto me-3">
+          <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item"><a href="login.html" class="link-underline link-underline-opacity-0">登入</a></li>
+            <li class="breadcrumb-item"><a href="register.html" class="link-underline link-underline-opacity-0">註冊</a></li>
+          </ol>
+        </nav>
+        <div class="tool-right me-4 d-flex">
           <a href="personal_id.html" alt="account">
-            <img src="img/user.png" class="icon pe-2" />
+            <img src="img/user.png" class="icon pe-2">
           </a>
           <a href="shopping_list.html" alt="shopping-cart">
-            <img src="img/shopping-cart.png" class="icon" />
+            <img src="img/shopping-cart.png" class="icon" >
           </a>
         </div>
       </div>
     </nav>
   </header>
-
   <!-- 個人檔案 -->
   <div class="container px-5 py-5">
     <div class="row">
@@ -96,7 +66,7 @@
           </div>
           <div class="form-group py-2">
             <label for="birth" class="form-label">出生</label>
-            <input type="text" name="birth" placeholder="xxxx-xx-xx" class="form-control" pattern="^((?:19[2-9]\d{1})|(?:20[01][09]))\-((?:0?[1-9])|(?:1[0-2]))\-((?:0?[1-9])|(?:[1-2][0-9])|30|31)$" />
+            <input type="text" name="birth" placeholder="xxxx-xx-xx" class="form-control" pattern="^((?:19[2-9]\d{1})|(?:20[0-2][0-9]))\-((?:0?[1-9])|(?:1[0-2]))\-((?:0?[1-9])|(?:[1-2][0-9])|30|31)$" />
           </div>
           <div class="form-group py-2">
             <label for="account" class="form-label">帳號</label>
