--- a/shop.html
+++ b/shop.html
@@ -5,26 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shop</title>
     <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9bb96208a0.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet"/>
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
@@ -68,10 +56,60 @@
           function(){
             $(".rating i").removeClass("hovered");
         })
-        $(".rating i").click(function(){
+        $(".rating i").on('click',function(){
           $(".rating i").removeClass("selected");
           $(this).prevAll().addBack().addClass("selected");
+          $("#ratingValue").val($(this).data("value"));
         })
+        $.validator.addMethod("ratingRequired", function(value, element) {
+          return value !== "";
+        }, "請選擇星星評分");
+        $("#com").validate({
+          ignore:[],
+          submitHandler: function(form) {
+              form.submit();
+          },
+          rules: {
+            ratingValue: {
+              ratingRequired: true
+            },
+            content: {
+              required: true
+            }
+          },
+          messages: {
+            content: {
+              required: "請輸入留言"
+            }
+          },
+          errorPlacement: function (error, element) {
+            if (element.attr("name") === "ratingValue") {
+              error.insertAfter(".rating");
+            }else if(element.attr("name") === "content"){
+              $("#error-container-1").html(error);
+            } else{
+              error.insertAfter(element);
+            }
+          }
+        });
+        $("#subscribe").validate({
+          submitHandler: function(form) {
+              form.submit();
+          },
+          rules:{
+            email:{
+              required:true,
+            }
+          },
+          messages: {
+            email: {
+                required:"信箱為必填欄位",
+            }
+          },
+          errorPlacement: function (error, element) {
+            $("#error-container-2").html(error);
+        }
+        });
       });
     </script>
     <style>
@@ -243,19 +281,21 @@
             </table>
           </div>
           <div class="border border-2 mb-2 comment" style="display: none">
-            <div class="border-bottom border-2 my-2 rating">
-              <span>商品評價:</span>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-            </div>
-            <form action="" method="" class="mt-2 d-flex flex-column">
+            <form action="" method="" class="mt-2 d-flex flex-column" id="com">
+              <div class="border-bottom border-2 my-2 rating">
+                <span>商品評價:</span>
+                <i class="fa-solid fa-star" data-value="1"></i>
+                <i class="fa-solid fa-star" data-value="2"></i>
+                <i class="fa-solid fa-star" data-value="3"></i>
+                <i class="fa-solid fa-star" data-value="4"></i>
+                <i class="fa-solid fa-star" data-value="5"></i>
+              </div>
+              <input type="hidden" name="ratingValue" id="ratingValue">
               <div class="d-flex align-items-center gap-2">
                 <span>客戶名字:</span>
                 <textarea name="content" rows="3" cols="100" placeholder="留下你的評論"></textarea>
-                <input type="submit" class="me-auto comment-submit mt-auto" />
+                <input type="submit" class="comment-submit mt-auto">
+                <span id="error-container-1"></span>
               </div>
             </form>
             <!-- <div class="d-flex flex-column border border-2 my-2 w-75">
@@ -275,40 +315,23 @@
     <footer class="bg-dark">
       <div class="container-fluid">
         <div class="row bg-dark py-5 align-items-center">
-          <div
-            class="col-12 col-md-6 text-light d-flex justify-content-center mt-3"
-          >
-            <span class="d-flex w-75 border border-2 border-white rounded"
-              >防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span
-            >
+          <div class="col-12 col-md-6 text-light d-flex justify-content-center mt-3">
+            <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
           </div>
           <div class="col-12 col-md-6 d-flex mt-3">
-            <div class="col-6 d-flex justify-content-end">
-              <div class="subscribe">
-                <div class="title text-light">E-MAIL</div>
-                <div class="input-group mt-3 emailbox">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="輸入E-mail"
-                    aria-label="Recipient's username"
-                    aria-describedby="button-addon2"
-                  />
-                  <button
-                    class="btn btn-outline-secondary"
-                    type="button"
-                    id="button-addon2"
-                  >
-                    訂閱
-                  </button>
-                </div>
+            <div class="col-7 d-flex ms-3">
+              <div class="subscribe w-75 ms-auto">
+                <div class="text-light fs-5 mb-2">Email:</div>
+                <form action="" id="subscribe" class="d-flex">
+                  <input type="email" class="form-control w-75" id="email" name="email" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
+                  <button class="btn btn-outline-secondary text-light" type="submit" id="button-addon2">訂閱</button>
+                </form>
+                <span id="error-container-2"></span>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-5">
               <div class="followus">
-                <div class="title text-light text-center followus_title">
-                  FOLLOW US ON
-                </div>
+                <div class="title text-light text-center followus_title">FOLLOW US ON</div>
                 <div class="d-flex justify-content-center gap-3 mt-3">
                   <a href="#" title="facebook">
                     <i class="fa-brands fa-square-facebook"></i>
@@ -321,16 +344,14 @@
                   </a>
                 </div>
               </div>
-            </div>
+            </div>          
           </div>
         </div>
       </div>
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            <p class="copyright text-light">
-              COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.
-            </p>
+            <p class="copyright text-light">COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.</p>
           </div>
         </div>
       </div>
