--- a/login.html
+++ b/login.html
@@ -55,6 +55,25 @@
             }
           }
         });
+        $("#subscribe").validate({
+          submitHandler: function(form) {
+              alert("success!");
+              form.submit();
+          },
+          rules:{
+            email:{
+              required:true,
+            }
+          },
+          messages: {
+            email: {
+                required:"信箱為必填欄位",
+            }
+          },
+          errorPlacement: function (error, element) {
+            $("#error-container").html(error);
+        }
+        });
       });
     </script>
     <style>
@@ -108,7 +127,7 @@
                         <button type="submit" class="btn btn-dark w-100 mb-3">登入</button>
                     </form>
                     <div class="d-flex justify-content-center">
-                        <button type="button" class="btn">忘記密碼</button>
+                        <button type="button" class="btn"><a href="forget.html" class="link-underline link-underline-opacity-0 text-black">忘記密碼</a></button>
                     </div>
                 </div>
                 <div class="col-4 d-flex flex-column justify-content-center align-items-center border border-2 border-start-0 gap-3 p-5">
@@ -128,16 +147,17 @@
           <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
         </div>
         <div class="col-12 col-md-6 d-flex mt-3">
-          <div class="col-6 d-flex justify-content-end">
-            <div class="subscribe">
-              <div class="title text-light">E-MAIL</div>
-              <div class="input-group mt-3 emailbox">
-                <input type="text" class="form-control" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">訂閱</button>
-              </div>
+          <div class="col-7 d-flex ms-3">
+            <div class="subscribe w-75 ms-auto">
+              <div class="text-light fs-5 mb-2">Email:</div>
+              <form action="" id="subscribe" class="d-flex">
+                <input type="email" class="form-control w-75" id="email" name="email" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary text-light" type="submit" id="button-addon2">訂閱</button>
+              </form>
+              <span id="error-container"></span>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-5">
             <div class="followus">
               <div class="title text-light text-center followus_title">FOLLOW US ON</div>
               <div class="d-flex justify-content-center gap-3 mt-3">
