--- a/personal_id.html
+++ b/personal_id.html
@@ -16,6 +16,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet" />
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/9bb96208a0.js" crossorigin="anonymous"></script>
   <!-- Validation -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
@@ -101,49 +103,42 @@
     <div class="container-fluid">
       <div class="row bg-dark py-5 align-items-center">
         <div class="col-12 col-md-6 text-light d-flex justify-content-center mt-3">
-          <span
-            class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
+          <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
         </div>
         <div class="col-12 col-md-6 d-flex mt-3">
-          <div class="col-6 d-flex justify-content-end">
-            <div class="subscribe">
-              <div class="title text-light">E-MAIL</div>
-              <div class="input-group mt-3 emailbox">
-                <input type="text" class="form-control" placeholder="輸入E-mail" aria-label="Recipient's username"
-                  aria-describedby="button-addon2" />
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">
-                  訂閱
-                </button>
-              </div>
+          <div class="col-7 d-flex ms-3">
+            <div class="subscribe w-75 ms-auto">
+              <div class="text-light fs-5 mb-2">Email:</div>
+              <form action="" id="subscribe" class="d-flex">
+                <input type="email" class="form-control w-75" id="email" name="email" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary text-light" type="submit" id="button-addon2">訂閱</button>
+              </form>
+              <span id="error-container"></span>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-5">
             <div class="followus">
-              <div class="title text-light text-center followus_title">
-                FOLLOW US ON
-              </div>
+              <div class="title text-light text-center followus_title">FOLLOW US ON</div>
               <div class="d-flex justify-content-center gap-3 mt-3">
                 <a href="#" title="facebook">
-                  <img src="img/social-media.png" class="fanpage-icon" />
+                  <i class="fa-brands fa-square-facebook"></i>
                 </a>
                 <a href="#" title="Instagram">
-                  <img src="img/instagram.png" class="fanpage-icon" />
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" title="Line" class="border border-2 border-black rounded">
-                  <img src="img/line.png" class="line fanpage-icon" />
+                <a href="#"title="Line">
+                  <i class="fa-brands fa-line"></i>
                 </a>
               </div>
             </div>
-          </div>
+          </div>          
         </div>
       </div>
     </div>
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <p class="copyright text-light">
-            COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.
-          </p>
+          <p class="copyright text-light">COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.</p>
         </div>
       </div>
     </div>
