--- a/shopping_list.html
+++ b/shopping_list.html
@@ -19,7 +19,7 @@
 
   <!--CSS-->
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/shoppingCart_new.css" / </head>
+  <link rel="stylesheet" href="css/shoppingCart.css" / </head>
 
 <body>
   <!-- 導覽列 -->
