--- a/shopping_list.html
+++ b/shopping_list.html
@@ -27,22 +27,25 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img src="img/hacker.png" alt="logo" class="logo">
+          <img src="img/hacker.png" alt="logo" class="logo" />
           <span class="logo-context fs-3 fw-bold">3C用品店|購物網</span>
         </a>
         <nav aria-label="breadcrumb" class="ms-auto me-3">
           <ol class="breadcrumb mb-0">
-            <li class="breadcrumb-item"><a href="login.html" class="link-underline link-underline-opacity-0">登入</a></li>
-            <li class="breadcrumb-item"><a href="register.html" class="link-underline link-underline-opacity-0">註冊</a>
+            <li class="breadcrumb-item">
+              <a href="login.html" class="link-underline link-underline-opacity-0">登入</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="register.html" class="link-underline link-underline-opacity-0">註冊</a>
             </li>
           </ol>
         </nav>
         <div class="tool-right me-4 d-flex">
           <a href="personal_id.html" alt="account">
-            <img src="img/user.png" class="icon pe-2">
+            <img src="img/user.png" class="icon pe-2" />
           </a>
           <a href="shopping_list.html" alt="shopping-cart">
-            <img src="img/shopping-cart.png" class="icon">
+            <img src="img/shopping-cart.png" class="icon" />
           </a>
         </div>
       </div>
@@ -202,6 +205,7 @@
       </div>
     </div>
   </div>
+  <button id="backToTop" class="back-to-top"></button>
   <script>
     $(document).ready(function ($) {
       $("#form-account").validate({
@@ -233,6 +237,16 @@
   </script>
   <script>
     $(document).ready(function () {
+      $(window).scroll(function () {
+        if ($(this).scrollTop() > 200) {
+          $("#backToTop").css("display", "flex");
+        } else {
+          $("#backToTop").css("display", "none");
+        }
+      });
+      $("#backToTop").click(function () {
+        $("html").animate({ scrollTop: 0 });
+      });
       function updateTotal() {
         let total = 0;
         $(".cart-item").each(function () {
@@ -250,7 +264,8 @@
 
       function updateCategoryCount(category, delta) {
         let countSpan = $("#" + category + "-count");
-        let current = parseInt(countSpan.attr("data-" + category + "Count")) || 0;
+        let current =
+          parseInt(countSpan.attr("data-" + category + "Count")) || 0;
         //console.log(current);
         let newCount = current + delta;
         countSpan.attr("data-" + category + "Count", newCount);
@@ -261,7 +276,7 @@
         let quantityInput = $(this).siblings("#quantity");
         let quantity = parseInt(quantityInput.val()) + 1;
         quantityInput.val(quantity);
-        let category = $(this).closest(".type").data("category"); 
+        let category = $(this).closest(".type").data("category");
         updateCategoryCount(category, 1);
         updateCategoryCount("items", 1);
         updateTotal();
@@ -271,8 +286,8 @@
         let quantityInput = $(this).siblings("#quantity");
         let quantity = parseInt(quantityInput.val());
         if (quantity > 1) {
-          quantityInput.val(quantity - 1); 
-          let category = $(this).closest(".type").data("category"); 
+          quantityInput.val(quantity - 1);
+          let category = $(this).closest(".type").data("category");
           updateCategoryCount(category, -1);
           updateCategoryCount("items", -1);
           updateTotal();
@@ -280,8 +295,10 @@
       });
 
       $(".remove-item").click(function () {
-        let category = $(this).closest(".type").data("category"); 
-        let count = parseInt($(this).closest(".cart-item").find("#quantity").val()) || 0;
+        let category = $(this).closest(".type").data("category");
+        let count =
+          parseInt($(this).closest(".cart-item").find("#quantity").val()) ||
+          0;
         console.log(count);
         updateCategoryCount(category, -count);
         updateCategoryCount("items", -count);
@@ -293,7 +310,9 @@
         let isChecked = $(this).prop("checked");
         $(".item-checkbox").each(function () {
           let category = $(this).closest(".type").data("category");
-          let quantity = parseInt($(this).closest(".cart-item").find(".quantity").val()) || 0;
+          let quantity =
+            parseInt($(this).closest(".cart-item").find(".quantity").val()) ||
+            0;
           let delta = isChecked ? quantity : -quantity;
           updateCategoryCount(category, delta);
           updateCategoryCount("items", delta);
@@ -302,16 +321,17 @@
         updateTotal();
       });
 
-
       $(".item-checkbox").change(function () {
         let isChecked = $(this).prop("checked");
-        let category = $(this).closest(".type").data("category"); 
-        let count = parseInt($(this).closest(".cart-item").find("#quantity").val()) || 0;
-        if(isChecked){
+        let category = $(this).closest(".type").data("category");
+        let count =
+          parseInt($(this).closest(".cart-item").find("#quantity").val()) ||
+          0;
+        if (isChecked) {
           //console.log(count);
           updateCategoryCount(category, count);
           updateCategoryCount("items", count);
-        }else{
+        } else {
           //console.log(count);
           updateCategoryCount(category, -count);
           updateCategoryCount("items", -count);
